--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "roboto-fontface": "*",
+    "sweetalert2": "^11.12.3",
     "toastify-js": "^1.12.0",
     "vue": "3.4.32",
     "vue-router": "4.4.0",
